--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -13,4 +13,6 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm run build
+      - name: Deploy
+      - run: npm run deploy
       
