--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -14,5 +14,5 @@ jobs:
       - run: npm run build --if-present
       - run: npm run build
       - name: Deploy
-      - run: npm run deploy
+        run: npm run deploy
       
