--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -17,5 +17,6 @@ jobs:
         run: 
           git config --global user.name 'test'
           git config --global user.email 'test@test.com'
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} 
           npm run deploy
       
